--- a/LeoTest/LeoTest/MainViewController.xib
+++ b/LeoTest/LeoTest/MainViewController.xib
@@ -23,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" placeholder="Enter a word" translatesAutoresizingMaskIntoConstraints="NO" id="NM9-SW-NXS">
+                <searchBar contentMode="redraw" placeholder="Enter a word" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NM9-SW-NXS">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="tintColor" red="0.30980392159999998" green="0.56078431370000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
